# jrl-walkgen

./: .pre-commit-config.yaml  CMakeLists.txt  package.xml
doc/: IEEEbib.bst  PatternGenerator.tex  PatternGeneratorMain.tex  isolatin1.sty  pgbib.bib  pgjrl.css
doc/figures/PatternGenerator/: AngularMomentum.ps  CartTableModel.fig  FigurePC1_X.ps  FigurePC1_Y.ps  FootPositionning.fig  HondaP2ControlMarche.fig  InverseKinematics.fig  InverseKinematics2.fig  InverseKinemtics3.fig  PatternGenerationAsZMPTrackingControl.fig  PendulumUnderConstraint.fig  PreviewGains.ps  SAVE.fig  SecondFigureZMPMB.ps  SecondFigureZMPMB_X.ps  SecondFigureZMPMB_Y.ps  Stacks.fig  ThirdFigureZMPMB_X.ps  ThirdFigureZMPMB_Y.ps  ZMPScheme.fig  ZMPScheme2.fig  ZMPSchemeSoftware.fig
include/jrl/walkgen/: patterngeneratorinterface.hh  pgtypes.hh  pinocchiorobot.hh
src/: Clock.cpp  Clock.hh  Debug.hh  PatternGeneratorInterfacePrivate.cpp  SimplePlugin.hh  SimplePluginManager.cpp  SimplePluginManager.hh  StepStackHandler.cpp  StepStackHandler.hh  patterngeneratorinterfaceprivate.hh  pgtypes.cpp  privatepgtypes.cpp  privatepgtypes.hh
src/FootTrajectoryGeneration/: FootTrajectoryGenerationAbstract.cpp  FootTrajectoryGenerationAbstract.hh  FootTrajectoryGenerationMultiple.cpp  FootTrajectoryGenerationMultiple.hh  FootTrajectoryGenerationStandard.cpp  FootTrajectoryGenerationStandard.hh  LeftAndRightFootTrajectoryGenerationMultiple.cpp  LeftAndRightFootTrajectoryGenerationMultiple.hh  OnLineFootTrajectoryGeneration.cpp  OnLineFootTrajectoryGeneration.h
src/GlobalStrategyManagers/: CoMAndFootOnlyStrategy.cpp  CoMAndFootOnlyStrategy.hh  DoubleStagePreviewControlStrategy.cpp  DoubleStagePreviewControlStrategy.hh  GlobalStrategyManager.hh
src/Mathematics/: AnalyticalZMPCOGTrajectory.cpp  AnalyticalZMPCOGTrajectory.hh  Bsplines.cpp  Bsplines.hh  ConvexHull.cpp  ConvexHull.hh  FootConstraintsAsLinearSystem.cpp  FootConstraintsAsLinearSystem.hh  OptCholesky.cpp  OptCholesky.hh  PLDPHerdt.cpp  PLDPSolver.cpp  PLDPSolver.hh  PLDPSolverHerdt.hh  PolynomeFoot.cpp  PolynomeFoot.hh  StepOverPolynome.cpp  StepOverPolynome.hh  intermediate-qp-matrices.cpp  intermediate-qp-matrices.hh  qld.cpp  relative-feet-inequalities.cpp  relative-feet-inequalities.hh
src/MotionGeneration/: CollisionDetector.cpp  CollisionDetector.hh  ComAndFootRealization.hh  ComAndFootRealizationByGeometry.cpp  ComAndFootRealizationByGeometry.hh  GenerateMotionFromKineoWorks.cpp  GenerateMotionFromKineoWorks.hh  StepOverPlanner.cpp  StepOverPlanner.hh  UpperBodyMotion.cpp  UpperBodyMotion.hh  WaistHeightVariation.cpp  WaistHeightVariation.hh
src/MultiContactRefTrajectoryGeneration/: MultiContactHirukawa.cc  MultiContactHirukawa.hh
src/PreviewControl/: LinearizedInvertedPendulum2D.cpp  LinearizedInvertedPendulum2D.hh  OptimalControllerSolver.cpp  OptimalControllerSolver.hh  PreviewControl.cpp  PreviewControl.hh  SupportFSM.cpp  SupportFSM.hh  SupportFSM_backup.hh  ZMPPreviewControlWithMultiBodyZMP.cpp  ZMPPreviewControlWithMultiBodyZMP.hh  rigid-body-system.cpp  rigid-body-system.hh  rigid-body.cpp  rigid-body.hh
src/RobotDynamics/: pinocchiorobot.cpp
src/ZMPRefTrajectoryGeneration/: AnalyticalMorisawaAbstract.cpp  AnalyticalMorisawaAbstract.hh  AnalyticalMorisawaCompact.cpp  AnalyticalMorisawaCompact.hh  DynamicFilter.cpp  DynamicFilter.hh  FilteringAnalyticalTrajectoryByPreviewControl.cpp  FilteringAnalyticalTrajectoryByPreviewControl.hh  OrientationsPreview.cpp  OrientationsPreview.hh  ZMPConstrainedQPFastFormulation.cpp  ZMPConstrainedQPFastFormulation.hh  ZMPDiscretization.cpp  ZMPDiscretization.hh  ZMPQPWithConstraint.cpp  ZMPQPWithConstraint.hh  ZMPRefTrajectoryGeneration.cpp  ZMPRefTrajectoryGeneration.hh  ZMPVelocityReferencedQP.cpp  ZMPVelocityReferencedQP.hh  ZMPVelocityReferencedQPDebug.cpp  ZMPVelocityReferencedSQP.cpp  ZMPVelocityReferencedSQP.hh  generator-vel-ref.cpp  generator-vel-ref.hh  mpc-trajectory-generation.cpp  mpc-trajectory-generation.hh  nmpc_generator.cpp  nmpc_generator.hh  problem-vel-ref.cpp  problem-vel-ref.hh  qp-problem.cpp  qp-problem.hh
src/data/: KWBarPath.pth
src/gnufiles/: AMC.gnu  AMCY.gnu  AMCYBump.gnu  ComFromDDO.gnu  ComFromDDO3D.gnu  ComZMP.gnu  ComZMPX.gnu  ComZMPXZMPMB.gnu  ComZMPY.gnu  DisplayTraj.gnu  LeftLegAngles.gnu  LeftRightAngles.gnu  Moments.gnu  RelativeZMP.gnu  RightLegAngles.gnu  UBangles.gnu  dqr.gnu  plotTest.gnu  plotTestCoM.gnu
srdf/: talos_wpg.srdf
tests/: CMakeLists.txt  ClockCPUTime.cpp  ClockCPUTime.hh  CommonTools.cpp  CommonTools.hh  DisplayLeftArm.gnu  DisplayRightArm.gnu  DumpReferencesObjects.cpp  DumpReferencesObjects.hh  ReadDataForNovela.cpp  TestBsplines.cpp  TestFootPrintPGInterface.Profiling.sh  TestFootPrintPGInterface.Valgrind.sh  TestFootPrintPGInterface.Valgrind2.sh  TestFootPrintPGInterface.cpp  TestFootPrintPGInterface.sh  TestHerdt2010.cpp  TestHirukawa2007.cpp  TestInverseKinematics.cpp  TestKajita2003.cpp  TestKajita2003Circle64TestFGPI.datref.cmake  TestKajita2003StraightWalking64TestFGPI.datref.cmake  TestKajitaDynamicFilter.cpp  TestMorisawa2007.cpp  TestMorisawa2007ShortWalk32TestFGPI.datref.cmake  TestMulticontactInverseGeometry.cpp  TestNaveau2015.cpp  TestNaveau2015OnlineSimple64TestFGPI.datref.cmake  TestObject.cpp  TestObject.hh  TestOptCholesky.cpp  TestRiccatiEquation.cpp  examples.CMakeList
tests/private_cmake/: FindqpOASES.cmake  cmake_metapod_configure.cmake
urdf/: talos_reduced_wpg.urdf
